--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <script src="/socket.io/socket.io.js"></script>
         <script>
             var socket = io.connect('http://localhost:8080');
+            socket.on('message', function(message) {
+                alert('Le serveur a un message pour vous : ' + message);
+            })
         </script>
     </body>
 </html>
