--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <script src="/socket.io/socket.io.js"></script>
         <script>
-            var socket = io.connect('http://localhost:8080');
+            var socket = io.connect('http://vps165415.ovh.net');
             socket.on('message', function(message) {
                 alert('Le serveur a un message pour vous : ' + message);
             })
