--- a/client.html
+++ b/client.html
@@ -53,6 +53,10 @@
             <p id="color"></p>
             <p id="whose-turn"></p>
             <div id="game-container"></div>
+            <p id="chat">
+                <span id="chat-messages"></span>
+                <input type="text" id="chat-message" placeholder="Type your message here" />
+            </p>
         </div>
     </body>
 </html>
